website/css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/* ==========================================================================
   Base styles
   ========================================================================== */

:root {
  --color-gray-500: #272431;
  --color-gray-400: #5c5676;
  --color-primary-500: #019369;
  --color-primary-400: #01ac7b;
  --font-size-500: 64px;
  --font-size-400: 48px;
  --font-size-300: 25px;
  --font-size-200: 20px;
  --font-size-100: 18px;
  --font-size-50: 16px;
  --container-width: 1300px;
  --font-family: "Atlas Grotesk Web", -apple-system, BlinkMacSystemFont,
    avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto,
    noto, arial, sans-serif;
}

html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

@font-face {
  font-family: "Atlas Grotesk Web";
  src: url("../fonts/AtlasGrotesk-Medium-Web.woff2") format("woff2"),
    url("../fonts/AtlasGrotesk-Medium-Web.woff") format("woff");
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  font-display: swap;
}

@font-face {
  font-family: "Atlas Grotesk Web";
  src: url("../fonts/AtlasGrotesk-Regular-Web.woff2") format("woff2"),
    url("../fonts/AtlasGrotesk-Regular-Web.woff") format("woff");
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  font-display: swap;
}

body {
  font-size: var(--font-size-100);
  font-family: var(--font-family);
  font-weight: 400;
  line-height: 1.6;
  color: var(--color-gray-400);
  text-rendering: optimizeLegibility;
}

html.simulate-monochromacy {
  filter: grayscale(1);
}

a {
  color: var(--color-primary-400);
  text-decoration: underline;
  transition: 100ms ease-in-out all;
}

a:hover {
  color: var(--color-primary-500);
}

p {
  margin: 0 0 21px;
}

p:last-child {
  margin-bottom: 0;
}

p.large {
  font-size: var(--font-size-200);
}

h1,
h2,
h3,
h4 {
  font-weight: 500;
  line-height: 1.2;
  color: var(--color-gray-500);
}

h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child {
  margin-top: 0;
}

.container {
  max-width: 1300px;
  margin-left: auto;
  margin-right: auto;
  padding: 0 15px;
}

img {
  max-width: 100%;
  height: auto;
}

@media only screen and (max-width: 1120px) {
  p.large {
    font-size: var(--font-size-200);
  }
}

@media only screen and (max-width: 560px) {
  body {
    font-size: var(--font-size-50);
  }
  p.large {
    font-size: var(--font-size-100);
  }
}

/* ==========================================================================
   Font size definitions
   ========================================================================== */

.heading-size--500 {
  font-size: var(--font-size-500);
  margin-bottom: 24px;
}

.heading-size--400 {
  font-size: var(--font-size-400);
  margin-bottom: 24px;
}

.heading-size--300 {
  font-size: var(--font-size-300);
  margin-bottom: 18px;
}

.heading-size--200 {
  font-size: var(--font-size-200);
  margin-bottom: 16px;
}

.heading-size--100 {
  font-size: var(--font-size-100);
  margin-bottom: 16px;
}

@media only screen and (max-width: 560px) {
  .heading-size--500 {
    font-size: 36px;
    margin-bottom: 24px;
  }

  .heading-size--400 {
    font-size: var(--font-size-300);
    margin-bottom: 18px;
  }

  .heading-size--300 {
    font-size: var(--font-size-200);
    margin-bottom: 16px;
  }

  .heading-size--200 {
    font-size: var(--font-size-100);
    margin-bottom: 16px;
  }

  .heading-size--100 {
    font-size: var(--font-size-50);
    margin-bottom: 16px;
  }
}

/* ==========================================================================
   Header
   ========================================================================== */

.header-primary {
}

.header-primary__container {
  display: flex;
  padding: 30px 15px;
}

.header-primary__logo {
}

.header-primary__nav {
  flex: 1;
  text-align: right;
  position: relative;
  top: 2px;
}

.header-primary__link {
  margin-left: 10px;
  text-decoration: none;
  font-size: var(--font-size-100);
  font-weight: 500;
  background: none;
  color: var(--color-gray-500);
}

.header-primary__button {
  margin-left: 10px;
  color: var(--color-gray-500);
  text-decoration: none;
  font-size: var(--font-size-100);
  font-weight: 500;
  border: 2px solid var(--color-gray-500);
  padding-left: 10px;
  background: #fff;
  padding: 8px 10px;
  cursor: pointer;
  box-shadow: 0 1px 6px 0 rgb(0 0 0 / 6%), 0 2px 32px 0 rgb(0 0 0 / 16%);
}
/* ... */

